# game-engine-math

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  Vector3D.cpp  Vector3D.hpp  game_engine_math  game_engine_math.hpp  main.cpp
.github/workflows/: main.yml
src/: game_engine_math.h  game_engine_math.hpp  game_engine_math_decls.h  main.cpp  plane.cpp  plane.h
src/matrix/: Matrix3D.cpp  Matrix3D.h  Matrix4D.h  Transform4D.cpp  Transform4D.h
src/point/: Point3D.cpp  Point3D.h
src/vector/: Quaternion.cpp  Quaternion.h  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.h  VectorConv.cpp  VectorConv.h
test/: CMakeLists.txt  Matrix3D_test  Matrix3D_test.cpp  Point3D_test.cpp  Quaternion_test.cpp  Vector3D_test.cpp
travis/: cmake.sh
